# ComfyUI-LLMs

./: .gitignore  CHANGELOG.md  LLMs_Chat.py  LLMs_Vision_OpenAI.py  LLMs_Vision_Unified.py  LLMs_Vison_Ali.py  LLMs_Vison_GLM4.py  LLMs_Vison_Gemini.py  README.md  __init__.py  comfyui_llms_wrapper.py  cyberdolphin_openai_compatible.py  openai_client.py  pyproject.toml  requirements.txt  settings.py  settings.yaml  settings.yaml.sample
